<resources>
    <string name="app_name">ETOWA SECURITY</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="page">Login Page</string>
    <string name="register">REGISTER</string>
    <string name="lupaPassword">LUPA PASSWORD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>