<?xml version="1.0" encoding="utf-8"?>

<!--=================== T H A N K   Y O U ===================-->
<!--============= TELAH MENGUNAKAN CODE SAYA ================-->
			<!-- https://github.com/ringga-dev -->
<!--=========================================================-->
<!--     R I N G G A   S E P T I A  P R I B A D I            -->
<!--=========================================================-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/index"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/logo_shape"
                android:padding="10dp"
                android:src="@drawable/logo_etowa_rbg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/loign_shape"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:cardBackgroundColor="@color/teal_200"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#00FF0000"
                        android:elevation="15dp"
                        android:fontFamily="@font/royalacid"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:targetApi="LOLLIPOP" />
                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:hint="BET ID"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_idbet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/the_meshroom_regular"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:hint="Name"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/the_meshroom_regular"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:hint="NUMBER PHONE"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/the_meshroom_regular"
                        android:inputType="phone"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_marginLeft="15dp"-->
<!--                    android:layout_marginTop="5dp"-->
<!--                    android:layout_marginRight="15dp"-->
<!--                    android:layout_marginBottom="5dp"-->
<!--                    android:hint="Devisi"-->
<!--                    android:textColorHint="@color/black">-->

<!--                    <com.google.android.material.textfield.TextInputEditText-->
<!--                        android:id="@+id/ed_devisi"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:ems="10"-->
<!--                        android:fontFamily="@font/the_meshroom_regular"-->
<!--                        android:inputType="text"-->
<!--                        android:maxLines="1" />-->
<!--                </com.google.android.material.textfield.TextInputLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/the_meshroom_regular"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/black"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/the_meshroom_regular"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">


                    <ImageView
                        android:id="@+id/btn_registe"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/loign_shape"
                        android:paddingHorizontal="3dp"
                        android:src="@drawable/ic_singin"
                        android:text="@string/login"
                        android:textColor="@color/purple_500"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:backgroundTint="@null" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/balbaleo"
                android:text="Back to Login Page"
                android:textColor="@color/purple_500" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/loading"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/bg_text"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.786"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading2"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>