<?xml version="1.0" encoding="utf-8"?>

<!--=================== T H A N K   Y O U ===================-->
<!--============= TELAH MENGUNAKAN CODE SAYA ================-->
			<!-- https://github.com/ringga-dev -->
<!--=========================================================-->
<!--     R I N G G A   S E P T I A  P R I B A D I            -->
<!--=========================================================-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/btn_cek_conetion"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_margin="5sp"
        android:background="@drawable/ic_internet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_help"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-9dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:src="@drawable/logo_etowa_rbg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/loign_shape"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:elevation="15dp"
                    android:fontFamily="@font/neon"
                    android:text="@string/page"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:targetApi="LOLLIPOP" />
            </androidx.cardview.widget.CardView>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/email"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/neon"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/neon"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_card"
                    android:fontFamily="@font/neon"
                    android:gravity="center"
                    android:text="login"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!--                <Button-->
                <!--                    android:id="@+id/lupa"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_margin="5dp"-->
                <!--                    android:background="@drawable/loign_shape"-->
                <!--                    android:paddingHorizontal="5dp"-->
                <!--                    android:text="@string/lupaPassword"-->
                <!--                    android:textColor="@color/purple_500"-->
                <!--                    android:textSize="15sp"-->
                <!--                    android:textStyle="bold"-->
                <!--                    app:backgroundTint="@null" />-->

            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25sp"
            android:layout_marginTop="5sp">

            <TextView
                android:id="@+id/tv_scan_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/neon"
                android:text="Login By QrCode"
                android:textColor="#D302273A"
                android:textSize="15dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/neon"
                android:text="Creat New Account"
                android:textColor="#D0FF00C8"
                android:textSize="15dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="@drawable/bg_text"
        android:layout_width="300dp"
        android:layout_height="300dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.786"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading2"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>